--- a/grc/deepwive_v1_deepwive_v1_sink.block.yml
+++ b/grc/deepwive_v1_deepwive_v1_sink.block.yml
@@ -1,11 +1,10 @@
-id: deepwive_v1_deepwive_v1_source
-label: Deepwive v1 Source
+id: deepwive_v1_deepwive_v1_sink
+label: deepwive_v1_sink
 category: '[deepwive_v1]'
 
 templates:
   imports: import deepwive_v1
-  make: deepwive_v1.deepwive_v1_source(${source_fn}, ${model_fn}, ${model_cout}, ${packet_len},
-  ${snr}, ${use_fp16})
+  make: deepwive_v1.deepwive_v1_sink(${source_fn}, ${model_fn}, ${model_cout}, ${packet_len}, ${snr}, ${use_fp16})
 
 #  Make one 'parameters' list entry for every parameter you want settable from the GUI.
 #     Keys include:
@@ -44,19 +43,19 @@ parameters:
 #      * dtype (e.g. int, float, complex, byte, short, xxx_vector, ...)
 #      * vlen (optional - data stream vector length. Default is 1)
 #      * optional (optional - set to 1 for optional inputs. Default is 0)
-# inputs:
+inputs:
+- label: packets
+  domain: message
+  # dtype: ...
+  # vlen: ...
+  # optional: ...
+
+# outputs:
 # - label: ...
 #   domain: ...
 #   dtype: ...
 #   vlen: ...
 #   optional: ...
-
-outputs:
-- label: symbols
-  domain: stream
-  dtype: complex
-  # vlen: ...
-  # optional: ...
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
