--- a/grc/deepwive_v1_soft_equalizer_single_tap.block.yml
+++ b/grc/deepwive_v1_soft_equalizer_single_tap.block.yml
@@ -1,45 +1,23 @@
-id: deepwive_v1_deepwive_v1_source
-label: Deepwive v1 Source
+id: deepwive_v1_soft_equalizer_single_tap
+label: soft_equalizer_single_tap
 category: '[deepwive_v1]'
 
 templates:
   imports: import deepwive_v1
-  make: deepwive_v1.deepwive_v1_source(${source_fn}, ${model_fn}, ${model_cout}, ${packet_len}, ${snr}, ${use_fp16})
+  make: deepwive_v1.soft_equalizer_single_tap(${fft_len}, ${constellation}, ${occupied_carriers}, ${pilot_carriers}, ${pilot_symbols}, ${symbols_skipped}, ${alpha}, ${input_is_shifted})
 
 #  Make one 'parameters' list entry for every parameter you want settable from the GUI.
 #     Keys include:
 #     * id (makes the value accessible as \$keyname, e.g. in the make entry)
 #     * label (label shown in the GUI)
 #     * dtype (e.g. int, float, complex, byte, short, xxx_vector, ...)
-
 parameters:
-- id: source_fn
-  label: Source (video) file
-  dtype: string
-
-- id: model_fn
-  label: Model file
-  dtype: string
-
-- id: snr
-  label: SNR of model
-  dtype: float
-
-- id: model_cout
-  label: Codeword cout
-  dtype: int
-
-- id: packet_len
-  label: Packet length
-  dtype: int
-
-- id: use_fp16
-  label: Use FP16 precision
-  dtype: bool
-
-# - id: test_mode
-#   label: Test code (don't use)
-#   dtype: bool
+- id: ...
+  label: ...
+  dtype: ...
+- id: ...
+  label: ...
+  dtype: ...
 
 #  Make one 'inputs' list entry per input and one 'outputs' list entry per output.
 #  Keys include:
@@ -48,24 +26,19 @@ parameters:
 #      * dtype (e.g. int, float, complex, byte, short, xxx_vector, ...)
 #      * vlen (optional - data stream vector length. Default is 1)
 #      * optional (optional - set to 1 for optional inputs. Default is 0)
-# inputs:
-# - label: ...
-#   domain: ...
-#   dtype: ...
-#   vlen: ...
-#   optional: ...
+inputs:
+- label: ...
+  domain: ...
+  dtype: ...
+  vlen: ...
+  optional: ...
 
 outputs:
-- label: symbols
-  domain: stream
-  dtype: complex
-  # vlen: ...
-  # optional: ...
-
-# - label: header
-#   domain: stream
-#   dtype: byte
-#   optional: true
+- label: ...
+  domain: ...
+  dtype: ...
+  vlen: ...
+  optional: ...
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
