--- a/grc/deepwive_v1_deepwive_v1_sink.block.yml
+++ b/grc/deepwive_v1_deepwive_v1_sink.block.yml
@@ -44,7 +44,7 @@ parameters:
 #      * vlen (optional - data stream vector length. Default is 1)
 #      * optional (optional - set to 1 for optional inputs. Default is 0)
 inputs:
-- label: packets
+- label: pdu_in
   domain: message
   # dtype: ...
   # vlen: ...
