--- a/grc/deepwive_v1_deepwive_v1_source.block.yml
+++ b/grc/deepwive_v1_deepwive_v1_source.block.yml
@@ -4,7 +4,7 @@ category: '[deepwive_v1]'
 
 templates:
   imports: import deepwive_v1
-  make: deepwive_v1.deepwive_v1_source(${source_fn}, ${model_fn}, ${model_cout}, ${packet_len}, ${snr}, ${use_fp16})
+  make: deepwive_v1.deepwive_v1_source(${source_fn}, ${model_fn}, ${model_cout}, ${packet_len}, ${snr}, ${num_chunks}, ${gop_size}, ${use_fp16})
 
 #  Make one 'parameters' list entry for every parameter you want settable from the GUI.
 #     Keys include:
@@ -31,6 +31,14 @@ parameters:
 
 - id: packet_len
   label: Packet length
+  dtype: int
+
+- id: num_chunks
+  label: Number of BW chunks
+  dtype: int
+
+- id: gop_size
+  label: GoP size
   dtype: int
 
 - id: use_fp16
@@ -62,10 +70,10 @@ outputs:
   # vlen: ...
   # optional: ...
 
-- label: encoded_symbols
-  domain: stream
-  dtype: complex
-  optional: true
+# - label: encoded_symbols
+#   domain: stream
+#   dtype: complex
+#   optional: true
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
