initial impl of packet alignment using counter

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -23,5 +23,6 @@ install(FILES
     deepwive_v1_deepwive_v1_sink.block.yml
     deepwive_v1_soft_equalizer_single_tap.block.yml
     deepwive_v1_deepwive_packet_header.block.yml
-    deepwive_v1_header_format.block.yml DESTINATION share/gnuradio/grc/blocks
+    deepwive_v1_header_format.block.yml
+    deepwive_v1_awgn_channel.block.yml DESTINATION share/gnuradio/grc/blocks
 )
