--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -33,7 +33,8 @@ GR_PYTHON_INSTALL(
     FILES
     __init__.py
     deepwive_v1_source.py
-    deepwive_v1_sink.py DESTINATION ${GR_PYTHON_DIR}/deepwive_v1
+    deepwive_v1_sink.py
+    awgn_channel.py DESTINATION ${GR_PYTHON_DIR}/deepwive_v1
 )
 
 ########################################################################
