impl short-long sync

--- a/include/deepwive_v1/CMakeLists.txt
+++ b/include/deepwive_v1/CMakeLists.txt
@@ -25,5 +25,7 @@ install(FILES
     api.h
     soft_equalizer_single_tap.h
     deepwive_packet_header.h
-    header_format.h DESTINATION include/deepwive_v1
+    header_format.h
+    ofdm_sync_short.h
+    ofdm_sync_long.h DESTINATION include/deepwive_v1
 )
