--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -22,12 +22,12 @@
 # Setup library
 ########################################################################
 include(GrPlatform) #define LIB_SUFFIX
-
 list(APPEND deepwive_v1_sources
     soft_equalizer_single_tap.cc
     deepwive_packet_header.cc
     header_format.cc
-)
+    ofdm_sync_short.cc
+    ofdm_sync_long.cc )
 
 set(deepwive_v1_sources "${deepwive_v1_sources}" PARENT_SCOPE)
 if(NOT deepwive_v1_sources)
