add sync long correlation output

--- a/grc/deepwive_v1_ofdm_sync_long.block.yml
+++ b/grc/deepwive_v1_ofdm_sync_long.block.yml
@@ -49,6 +49,9 @@ outputs:
 -   domain: stream
     dtype: complex
     multiplicity: '1'
+-   domain: stream
+    dtype: float
+    multiplicity: '1'
 asserts:
 - ${ sync_length > 0 }
 
