--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -25,5 +25,6 @@ install(FILES
     deepwive_v1_header_format.block.yml
     deepwive_v1_awgn_channel.block.yml
     deepwive_v1_ofdm_sync_short.block.yml
-    deepwive_v1_ofdm_sync_long.block.yml DESTINATION share/gnuradio/grc/blocks
+    deepwive_v1_ofdm_sync_long.block.yml
+    deepwive_v1_ofdm_frame_equalizer.block.yml DESTINATION share/gnuradio/grc/blocks
 )
