--- a/grc/deepwive_v1_ofdm_frame_equalizer.block.yml
+++ b/grc/deepwive_v1_ofdm_frame_equalizer.block.yml
@@ -49,10 +49,13 @@ inputs:
     multiplicity: '1'
 
 outputs:
--   domain: stream
-    dtype: complex
-    vlen: 48
-    multiplicity: '1'
+# -   domain: stream
+#     dtype: complex
+#     vlen: 48
+#     multiplicity: '1'
+-   domain: message
+    id: payload_IQ
+    dtype: symbols
 
 #  'file_format' specifies the version of the GRC yml format used in the file
 #  and should usually not be changed.
