--- a/grc/deepwive_v1_ofdm_sync_long.block.yml
+++ b/grc/deepwive_v1_ofdm_sync_long.block.yml
@@ -44,10 +44,10 @@ inputs:
 -   domain: stream
     dtype: complex
     multiplicity: '1'
--   label: in delayed
-    domain: stream
-    dtype: complex
-    multiplicity: '1'
+# -   label: in delayed
+#     domain: stream
+#     dtype: complex
+#     multiplicity: '1'
 
 outputs:
 -   domain: stream
