--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -25,7 +25,8 @@ include(GrPlatform) #define LIB_SUFFIX
 list(APPEND deepwive_v1_sources
     ofdm_sync_short.cc
     ofdm_sync_long.cc
-    ofdm_frame_equalizer_impl.cc )
+    ofdm_frame_equalizer_impl.cc
+    header_insert.cc )
 
 set(deepwive_v1_sources "${deepwive_v1_sources}" PARENT_SCOPE)
 if(NOT deepwive_v1_sources)
